# marte-football-fullstack

./: API_README.md  api_description.json  app.py  main.py  nb.ipynb  openapi.yaml  path_cleaner.py  paths.json  pyproject.toml  requirements.txt  start_server.sh  test_client.py
frontend/: index.html
frontend/assets/: index-CEZDU9Vr.css  index-DEMxjmTY.js
